--- a/libs/books/feature/src/lib/book-search/book-search.component.html
+++ b/libs/books/feature/src/lib/book-search/book-search.component.html
@@ -37,7 +37,8 @@
               (click)="addBookToReadingList(b)"
               [disabled]="b.isAdded"
             >
-              Want to Read
+           
+              {{ b.isFinished ? 'Finished' : 'Want to Read' }}
             </button>
           </div>
         </div>
